Ajoute  un colonne # à tab:data pour identifier les échantillons Ordre de grandeur des 3 contraintes transverses possibles.

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -122,35 +122,38 @@ To sum up, we expect two regimes of viscosity-dominated wrinkling: for $H\ll H^*
 \section*{Experimental tests}
 
 \begin{table*}
-\begin{tabular}{SSSScSrrScSSSScSSSSSS}
+\begin{tabular}{cSSSScSrrScSSSScSSSSSS}
 %\toprule
-\multicolumn{4}{c}{Preparation} & &  \multicolumn{4}{c}{Properties} & & \multicolumn{4}{c}{Measurements} & & \multicolumn{6}{c}{Results} \\ 
-\cline{1-4} \cline{6-9} \cline{11-14} \cline{16-21}\\[-2ex]
-{cas} & {GDL} & {gly} & {$e$} && {$\eta$} & \multicolumn{1}{c}{$G^\prime$} & \multicolumn{1}{c}{$\alpha$} & {$\xi$} && {$h$} & {$H_{min}$} & {$H_{max}$} & {$v_\text{max}$} && {$\Upsilon$} & {$H/H^*$} & {$\lambda_\text{exp}$} & {$\lambda_{D}$} & {$\lambda_{P}$} & {$\lambda_{D+P}$} \\ 
-{\%w} & {\%w} & {\%w} & \si{\micro\metre} && \si{\milli\pascal\second} & \multicolumn{1}{c}{\si{\pascal}} & \si{\square\nano\metre} & \si{\micro\metre} && \si{\micro\metre} & \si{\micro\metre} & \si{\micro\metre} & \si{\micro\metre/\second} && {$10^8$} &  & \si{\milli\metre} & \si{\milli\metre} & \si{\milli\metre} & \si{\milli\metre} \\ 
-\cline{1-4} \cline{6-9} \cline{11-14} \cline{16-21}\\[-2ex]
+&\multicolumn{4}{c}{Preparation} & &  \multicolumn{4}{c}{Properties} & & \multicolumn{4}{c}{Measurements} & & \multicolumn{6}{c}{Results} \\ 
+\cline{2-5} \cline{7-10} \cline{12-15} \cline{17-22}\\[-2ex]
+\# &{cas} & {GDL} & {gly} & {$e$} && {$\eta$} & \multicolumn{1}{c}{$G^\prime$} & \multicolumn{1}{c}{$\alpha$} & {$\xi$} && {$h$} & {$H_{min}$} & {$H_{max}$} & {$v_\text{max}$} && {$\Upsilon$} & {$H/H^*$} & {$\lambda_\text{exp}$} & {$\lambda_{D}$} & {$\lambda_{P}$} & {$\lambda_{D+P}$} \\ 
+&{\%w} & {\%w} & {\%w} & \si{\micro\metre} && \si{\milli\pascal\second} & \multicolumn{1}{c}{\si{\pascal}} & \si{\square\nano\metre} & \si{\micro\metre} && \si{\micro\metre} & \si{\micro\metre} & \si{\micro\metre} & \si{\micro\metre/\second} && {$10^8$} &  & \si{\milli\metre} & \si{\milli\metre} & \si{\milli\metre} & \si{\milli\metre} \\ 
+\cline{2-5} \cline{7-10} \cline{12-15} \cline{17-22}\\[-2ex]
 %ech2
-4 & 4 & 0 & 74.5 && 1.0 & 487 & 67000 & 4.9 && 38.3 & 6.3 & 29.3 & 0.11 && 1.62 & 0.54 & 0.89 & 1.20 & 0.88 & 1.22 \\ 
-& & & && & & & && 40.2 & 1.7 & 32.9 & 0.09 && 0.70 & 0.09 & 0.45 & 1.00 & 0.39 & 1.00\\
-4 & 4 & 0 & 92.4 && 1.0 & 487 & 67000 & 4.9 && 27.8 & 13.5 & 50.8 & 0.20 && 1.57 & 1.17 & 0.85 & 1.01 & 1.10 & 1.20 \\ 
-4 & 4 & 0 & 106.1 && 1.0 & 487 & 67000 & 4.9 && 32.7 & 30.7 & 42.9 & 0.14 && 2.54 & 2.23 & 1.52 & 1.24 & 1.85 & 1.90 \\ 
-4 & 4 & 0 & 138.0 && 1.0 & 487 & 67000 & 4.9 && 48.2 & 32.0 & 63.9 & 0.11 && 4.05 & 2.28 & 1.62 & 1.69 & 2.56 & 2.62 \\
-& & & && & & & && 57.4 & 2.1 & 80.9 & 0.05 && 1.25 & 0.09 & 0.81 & 1.37 & 0.6 & 1.37 \\
-\cline{1-4} \cline{6-9} \cline{11-14} \cline{16-21}\\[-2ex]
-8 & 8 & 0 & 85.2 && 1.0 & 1817 & 2150 & 3.1 && 49.8 & 10.0 & 26.8 & 0.10 && 6.50 & 3.79 & 1.00 & 0.82 & 1.60 & 1.61 \\ 
-& & & && & & & && 60.5 & 1.1 & 24.0 & 0.11 && 1.94 & 0.42 & 0.50 & 0.77 & 0.55 & 0.82\\
-8 & 8 & 0 & 91.0 && 1.0 & 1817 & 2150 & 3.1 && 23.4 & 30.2 & 47.7 & 0.10 && 12.05 & 9.70 & 1.50 & 0.66 & 2.04 & 2.04 \\ 
-& & & && & & & && 30.7 & 1.6 & 55.0 & 0.02 && 15.60 & 0.32 & 0.75 & 0.82 & 0.59 & 0.83 \\
-\cline{1-4} \cline{6-9} \cline{11-14} \cline{16-21}\\[-2ex]
-4 & 4 & 20 & 63.7 && 1.6 & 1142 & 24600 & 2.7 && 39.1 & 1.2 & 10.9 & 0.21 && 0.86 & 0.20 & 0.49 & 0.80 & 0.36 & 0.80 \\ 
-4 & 4 & 35 & 82.3 && 2.7 & 1858 & 25300 & 1.8 && 58.3 & 0.9 & 12.6 & 0.02 && 10.98 & 0.13 & 0.61 & 1.06 & 0.56 & 1.06 \\ 
-4 & 4 & 50 & 95.3 && 5.4 & 4660 & 5700 & 1.5 && 65.1 & 7.9 & 14.4 & 0.02 && 16.30 & 1.52 & 1.23 & 1.50 & 1.85 & 1.96 \\ 
+a & 4 & 4 & 0 & 74.5 && 1.0 & 487 & 67000 & 4.9 && 38.3 & 6.3 & 29.3 & 0.11 && 1.62 & 0.54 & 0.89 & 1.20 & 0.88 & 1.22 \\ 
+& & & & && & & & && 40.2 & 1.7 & 32.9 & 0.09 && 0.70 & 0.09 & 0.45 & 1.00 & 0.39 & 1.00\\
+b & 4 & 4 & 0 & 92.4 && 1.0 & 487 & 67000 & 4.9 && 27.8 & 13.5 & 50.8 & 0.20 && 1.57 & 1.17 & 0.85 & 1.01 & 1.10 & 1.20 \\ 
+c & 4 & 4 & 0 & 106.1 && 1.0 & 487 & 67000 & 4.9 && 32.7 & 30.7 & 42.9 & 0.14 && 2.54 & 2.23 & 1.52 & 1.24 & 1.85 & 1.90 \\ 
+d & 4 & 4 & 0 & 138.0 && 1.0 & 487 & 67000 & 4.9 && 48.2 & 32.0 & 63.9 & 0.11 && 4.05 & 2.28 & 1.62 & 1.69 & 2.56 & 2.62 \\
+& & & & && & & & && 57.4 & 2.1 & 80.9 & 0.05 && 1.25 & 0.09 & 0.81 & 1.37 & 0.6 & 1.37 \\
+\cline{2-5} \cline{7-10} \cline{12-15} \cline{17-22}\\[-2ex]
+e & 8 & 8 & 0 & 85.2 && 1.0 & 1817 & 2150 & 3.1 && 49.8 & 10.0 & 26.8 & 0.10 && 6.50 & 3.79 & 1.00 & 0.82 & 1.60 & 1.61 \\ 
+& & & & && & & & && 60.5 & 1.1 & 24.0 & 0.11 && 1.94 & 0.42 & 0.50 & 0.77 & 0.55 & 0.82\\
+f & 8 & 8 & 0 & 91.0 && 1.0 & 1817 & 2150 & 3.1 && 23.4 & 30.2 & 47.7 & 0.10 && 12.05 & 9.70 & 1.50 & 0.66 & 2.04 & 2.04 \\ 
+& & & & && & & & && 30.7 & 1.6 & 55.0 & 0.02 && 15.60 & 0.32 & 0.75 & 0.82 & 0.59 & 0.83 \\
+\cline{2-5} \cline{7-10} \cline{12-15} \cline{17-22}\\[-2ex]
+g & 4 & 4 & 20 & 63.7 && 1.6 & 1142 & 24600 & 2.7 && 39.1 & 1.2 & 10.9 & 0.21 && 0.86 & 0.20 & 0.49 & 0.80 & 0.36 & 0.80 \\ 
+h & 4 & 4 & 35 & 82.3 && 2.7 & 1858 & 25300 & 1.8 && 58.3 & 0.9 & 12.6 & 0.02 && 10.98 & 0.13 & 0.61 & 1.06 & 0.56 & 1.06 \\ 
+i & 4 & 4 & 50 & 95.3 && 5.4 & 4660 & 5700 & 1.5 && 65.1 & 7.9 & 14.4 & 0.02 && 16.30 & 1.52 & 1.23 & 1.50 & 1.85 & 1.96 \\ 
 \end{tabular}
 \caption{Fully characterised samples at the basis of Fig.~\ref{fig:DarcyPoiseuille}. Lines where preparation and properties are left blank correspond to the average of the secondary blisters of the previous line. `cas', `GDL' and `gly' indicate the weight fraction of sodium caseinate, GDL and glycerol respectively. $\xi$ is the pore size at the end of each experiment.}
 \label{tab:data}
 \end{table*}
 
-The two above models yield wavelengths that are of the same order in most of the cases under study. Thus only systematic measurements of the experimental $\lambda$ together with estimates for all the parameters involved in either model shall allow one to discriminate between them (see Supplementary Method for details on such measurements). As summarized in Table~\ref{tab:data} we systematically varied (i) the thickness of the cell, impacting $h$ and the maximal amplitude, (ii) the gel composition and thus both its stiffness and its permeability, (iii) the viscosity of the solvent by adding glycerol, which also impacted the gel stiffness, permeability and $\tau$. Finally, the only parameter that we had no control upon was the initial altitude $H$ of the gel before wrinkling that varied randomly. However we were able to obtain more data at small $H/H^*$ ratios by considering not only the primary patterns but also the secondary ones. Since the saturation of the primary pattern flattens the gel on the top and bottom walls, the secondary blisters always appear in a Darcy situation ($H\ll H^*$). Here the wavelength associated to the secondary blister is taken as half of that of the primary pattern as shown in Supplementary Fig.~\ref{fig:generations}.
+For a typical gel sheet (Table~\ref{tab:data}b) the buoyancy after syn\ae{}resis is estimated as $\Delta\rho=\SI{130}{\kilo\gram\per\cubic\metre}$ leading to a gravity stress $\sigma_\perp^G \approx \SI{0.04}{\pascal}$. This is much lower than typical Darcy or Poiseuille stresses $\sigma_\perp^D \approx \sigma_\perp^P \approx \SI{0.15}{\pascal}$.
+
+
+Darcy and Poiseuille models yield wavelengths that are of the same order in most of the cases under study. Thus only systematic measurements of the experimental $\lambda$ together with estimates for all the parameters involved in either model shall allow one to discriminate between them (see Supplementary Method for details on such measurements). As summarized in Table~\ref{tab:data} we systematically varied (i) the thickness of the cell, impacting $h$ and the maximal amplitude, (ii) the gel composition and thus both its stiffness and its permeability, (iii) the viscosity of the solvent by adding glycerol, which also impacted the gel stiffness, permeability and $\tau$. Finally, the only parameter that we had no control upon was the initial altitude $H$ of the gel before wrinkling that varied randomly. However we were able to obtain more data at small $H/H^*$ ratios by considering not only the primary patterns but also the secondary ones. Since the saturation of the primary pattern flattens the gel on the top and bottom walls, the secondary blisters always appear in a Darcy situation ($H\ll H^*$). Here the wavelength associated to the secondary blister is taken as half of that of the primary pattern as shown in Supplementary Fig.~\ref{fig:generations}.
 
 Our results are displayed in Fig.~\ref{fig:DarcyPoiseuille}. Although they provide the correct order of magnitude for $\lambda$, neither model alone is able to quantitatively reproduce the full data set. However considering only the points where $H<H^*$ (respectively $H>H^*$), the Darcy (resp. Poiseuille) model fits the data well albeit with a prefactor. Note that it would be easy to miss out on the failure of the Poiseuille model at small wavelengths by adding an unexplained offset (dashed line in Fig.~\ref{fig:DarcyPoiseuille}b). Nonetheless, a complete model (derived in Supplementary Methods), summing up the influence of both Poiseuille and Darcy dissipation shows a better agreement for all values of $H/H^*$.
 
@@ -213,6 +216,7 @@ I(q) = \frac{2\chi\Gamma(d)}{\left(1+\left((d+1)\xi q\right)^2\right)^{d/2}}
 \label{eq:fractalS}
 \end{equation}
 where the susceptibility $\chi$ is related to the fluorescence contrast between the network and the solvent, the cut off length $\xi$ corresponds to the largest pore size and $d$ is the fractal dimension. $\Gamma$ is the gamma function. Eq.~(\ref{eq:fractalS}) is a good approximation to the 2D Fourier transform of a fractal pair correlation function $g(r) \sim 1+ e^{-r/\xi} r^{d-2}$.
+%En 3D on peut citer \cite{Martin1987,Chen1986}
 
 Figure~\ref{fig:acidification}c of the main text and Supplementary Fig.~\ref{fig:nonmonotonic}c and d show the evolution of the fitting parameters in two different sets of boundary conditions: (i) complete adhesion of the gel on all walls, preventing syn\ae{}resis and swelling; (ii) complete adhesion except on the top wall, allowing syn\ae{}resis and swelling. The later situation is a proxy to the situation where we observe wrinkling, since it was necessary to keep the gel into the thin focal plane of the 63x objective lens of the confocal microscope. To do so, we coated only the microscope slide with acrylamide brush. The cover slip was cleaned but not coated, thus keeping strong adhesion on the side closer to the objective lens. Neither buckling nor wrinkling was detected in such configuration.
 
@@ -309,7 +313,7 @@ When the elastic film is sandwiched between two viscous layers of respective thi
 \begin{equation}
 \frac{1}{H^3} = \frac{1}{H_1^3}+\frac{1}{H_2^3}.
 \end{equation}
-This corresponds to the experimental case where the gel film is far from both of the cell walls. Since we have an almost buoyant gel and no more free surface the gravity can indeed be neglected.
+This corresponds to the experimental case where the gel film is far from both of the cell walls. Since we have an almost buoyant gel and no more free surface gravity can indeed be neglected.
 
 \subsubsection*{Porous elastic film with no possible Poiseuille flow}
 Another limiting case is that of a porous elastic film immersed in a viscous medium where longitudinal resistance to flow is infinite. It is the case in our experiments when the film is at contact with one of the walls. The only way to deform the film is to flow some liquid through the film of permeability $\alpha$. The transverse load derives from the Darcy law:
