Amplitude dépendante du temps dans un deuxième temps

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -41,7 +41,7 @@ amsmath,amssymb,prl]{revtex4-1}
 
 There are many ways and reasons for a film to wrinkle. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate: the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength~\cite{Gough1940, Bijlaard1946}. On the engineering side the last two decades have seen a bloom of methods to obtain well-controlled patterns via linear~\cite{Bowden1998, Genzer2006, Hu1998, Kim2010, Vandeparre2011, Li2013} or nonlinear wrinkling~\cite{Efimenko2005, Guvendiren2010, Kim2011a, Brau2011}. Such patterns can be triggered by temperature dilation, swelling or the removal of pre-strain. On the biology side wrinkling-controlled morphogenesis is ubiquitous: ageing and the loss of elastic fibres makes our skin wrinkles~\cite{Bissett1987, Genzer2006}, difference in growth rates between the gut tube and its dorsal anchoring is responsible for the vilification of guts~\cite{Savin2011, Ciarletta2014, Shyer2013}, localized cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern~\cite{Trejo2013, Asally2012}. On the physics side analogues of wrinkling have been found in situations where an effective substrate comes from the resistance to uniaxial stretching~\cite{Cerda2003}, from gravity~\cite{Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, from boundaries~\cite{Vandeparre2011a, Li2013} or from adhesion~\cite{Vella2009a}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Stability analysis of a film lying on a thin viscous substrate was studied only recently~\cite{Huang2002}. Since in practice gravity sets the wavelength in such situation~\cite{Smoluchowski1910}, the wrinkling on a confined viscous substrate has not been studied experimentally.
 
-Yet, in a biological context, thin tissues, e.g. epithelimum or endothelium, are naturally confined and immersed in a nearly buoyant medium, e.g. lymph, blood or mucus, a practical situation were a thin viscous substrate would set the wrinkling wavelength. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling~\cite{Ma2004,Longley2013}. Therefore benchmark experiments that explore the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium are in line to get fundamental insights into such a biologically relevant situation.
+Yet, in a biological context, thin tissues, e.g. epithelimum or endothelium, are naturally confined and immersed in a nearly buoyant medium, e.g. lymph, blood or mucus, a practical situation where a thin viscous substrate would set the wrinkling wavelength. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling~\cite{Ma2004,Longley2013}. Therefore benchmark experiments that explore the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium are in line to get fundamental insights into such a biologically relevant situation.
 
 Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of casein, one of the milk proteins.  As a result, not only does the casein form a gel as expected~\cite{Bremer1989} --this is a well-known effect used in cheese or yogurt making-- but the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit walls is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that upon acidification the casein network spontaneously shrinks then swells at the micron level and wrinkles at the millimetre scale. We systematically investigate such swelling-induced wrinkling of a porous gel film sandwiched between two viscous layers, the whole system being confined between two glass plates. As shown in Fig.~\ref{fig:dynamics} and in Supplementary Movies 1 and 2, transverse confinement leads to saturation of the amplitude on both the top and bottom walls followed by a cascade of secondary and ternary buckling. Such cascade buckling has already been observed by~\cite{Roman1999} in a one-dimensional macroscopic system, a sheet of steel forced to buckle between two solid plates. In addition one has to note that the primary wavelength is much smaller than the size of the system, implying that a simple buckling scenario cannot explain the observations in Fig.~\ref{fig:dynamics} and that only a wrinkling instability can be invoked. 
 
@@ -247,7 +247,7 @@ The mechanical equilibrium of a plate of thickness $h$, Young modulus $E$ and Po
 \end{equation}
 where $w(x,t)$ is the deflection of the plate along $z$~\cite{Biot1957}. Since we deal with slow rates of deformation, inertia is neglected.
 
-We assume that the deflection can be decomposed in exponentially growing sinusoidal modes and we consider one of them $w(x,t) =  A_0 e^{t/\tau} \sin qx$ of characteristic time $\tau$ and wavevector $q$. Eq.~(\ref{eq:mecheq}) then reads
+We decomposed the deflection in sinusoidal modes $w(x,t) =  A \sin qx$ of wavevector $q$. Eq.~(\ref{eq:mecheq}) then reads
 \begin{equation}
 \left(\frac{1}{12} B h^3 q^4 - \sigma_\parallel h q^2\right)w = \sigma_\perp,
 \label{eq:mecheqop}
@@ -283,7 +283,8 @@ Mass conservation writes
 \frac{\partial Q}{\partial x} + \frac{\partial w}{\partial t} = 0.
 \label{eq:conservation}
 \end{equation}
-Keeping only linear order terms, one gets
+
+Assuming an exponentially growing amplitude $A(t) = A_0 \exp(t/\tau)$ and keeping only linear order terms, one gets
 \begin{equation}
 \frac{12\eta}{\tau} \frac{w}{H^3q^2} = -\sigma_\perp.
 \label{eq:PoiseuilleLoad}
