remplace ech19 par ech26 dans les images aussi

--- a/generate_long.tex
+++ b/generate_long.tex
@@ -24,7 +24,7 @@ red!60!yellow,
 red!40!yellow,
 }
 \tikzsetnextfilename{structure_confocal}
-%\input{fig_long/structure_confocal.pgf}
+\input{fig_long/structure_confocal.pgf}
 \tikzsetnextfilename{structure_finale}
 %\input{fig_long/structure_finale.pgf}
 \tikzsetnextfilename{prise_cas4}
@@ -38,7 +38,7 @@ red!40!yellow,
 \tikzsetnextfilename{basquin}
 %\input{fig_long/basquin.pgf}
 \tikzsetnextfilename{MonkmanGrant}
-\input{fig_long/MonkmanGrant.pgf}
+%\input{fig_long/MonkmanGrant.pgf}
 \tikzsetnextfilename{lambda}
 %\input{fig_long/lambda.pgf}
 \end{document}
