Duplique le schema de notations

--- a/plis_figures.tex
+++ b/plis_figures.tex
@@ -91,4 +91,11 @@
 	\label{fig:nonmonotonic}%
 \end{figure}
 
+\begin{figure}
+	\tikzsetnextfilename{notations}
+	\input{fig_plis/notations.pgf}%
+	\caption{Schematic notations.}%
+	\label{fig:notations}%
+\end{figure}
+
 \end{document}
